--- a/albion-react-ui/src/App.css
+++ b/albion-react-ui/src/App.css
@@ -1,38 +1,56 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  /* text-align: center; */
+  /* background-color: #282c34; */
+  background-color: whitesmoke;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* font-size: calc(10px + 2vmin); */
+  color: black;
+}
+
+.AppHeader {
+  height: 50px;
+  display: flex;
   align-items: center;
+  justify-content: space-around;
+  padding: 0;
+  /* border-bottom: 1px solid rgba(0, 0, 0, 0.15); */
+  color: rgb(255, 255, 255);
+}
+
+.AppFooter {
+  height: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border-top: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.SideBarAndPageContent {
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: flex-start;
+  /* padding:30px; */
+}
+
+.SideBar {
+  height: auto;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  overflow: auto;
+  padding: 20px;
+  margin-top: 20vh;
 }
 
-.App-link {
-  color: #61dafb;
-}
+/* .SideBarMenu {
+  color: aqua;
+} */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.PageContent {
+  display: flex;
+  flex: 1;
+  padding: 20px;
 }
